<?xml version="1.0" encoding="utf-8"?>
<resources>
  
    <string name="app_name">YYJQ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="profile_title">我的YYJQ</string>
    <string name="profile_login">登录</string>
    <string name="profile_more">更多</string>
    <string name="profile_welcome">欢迎来到一樱俱全</string>

    <string name="profile_output">我卖出的</string>
    <string name="profile_input">我买入的</string>
    <string name="profile_put">我发布的</string>
    <string name="profile_receive">我接收的</string>
    <string name="profile_comment">我的评价</string>
    
    <string name="profile_set">设置</string>
    <string name="profile_help">帮助</string>
    
    <string name="profile_quit">退出登录</string>
    
    <!-- JazzyViewPager -->
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <!-- JazzyViewPager -->

</resources>
